--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,9 @@
+/* Colors
+ * Primary - 
+ * Secondary - #3DF4BD
+ * Warning - #F45800
+ */
+
 html {
   background-color: #efefef;
 }
@@ -12,7 +18,7 @@ p, h1, h2, h3, h4, h5, h6, span, a, div {
     font-weight: 100;  
 }
 .wrap {
-  margin-top: 80px;
+  margin-top: 120px;
   max-width: 1200px;
 }
 .hidden {
